<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/lessonsFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.learnwords.app.ui.auth.AuthFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_authFragment_to_lessonsFragment"
            app:destination="@id/lessonsFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_authFragment_to_accountTypeFragment"
            app:destination="@id/accountTypeFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_authFragment_to_subscriptionFragment"
            app:destination="@id/subscriptionFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/accountTypeFragment"
        android:name="com.learnwords.app.ui.auth.AccountTypeFragment"
        android:label="@string/account_type_title"
        tools:layout="@layout/fragment_account_type">
        <action
            android:id="@+id/action_accountTypeFragment_to_languageSettingsFragment"
            app:destination="@id/languageSettingsFragment"
            app:popUpTo="@id/accountTypeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/lessonsFragment"
        android:name="com.learnwords.app.ui.lessons.LessonsFragment"
        android:label="@string/lessons_title"
        tools:layout="@layout/fragment_lessons">
        <action
            android:id="@+id/action_lessonsFragment_to_learnFragment"
            app:destination="@id/learnFragment" />
    </fragment>

    <fragment
        android:id="@+id/learnFragment"
        android:name="com.learnwords.app.ui.learn.LearnFragment"
        android:label="@string/learn_title"
        tools:layout="@layout/fragment_learn">
        <argument
            android:name="lesson"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="wordSet"
            app:argType="string"
            android:defaultValue="lesson" />
        <action
            android:id="@+id/action_learn_to_learn"
            app:destination="@id/learnFragment"
            app:popUpTo="@id/learnFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.learnwords.app.ui.upload.UploadFragment"
        android:label="@string/nav_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/difficultFragment"
        android:name="com.learnwords.app.ui.learn.LearnFragment"
        android:label="@string/nav_difficult"
        tools:layout="@layout/fragment_learn">
        <argument
            android:name="lesson"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="wordSet"
            app:argType="string"
            android:defaultValue="difficult" />
    </fragment>

    <fragment
        android:id="@+id/languageSettingsFragment"
        android:name="com.learnwords.app.ui.settings.LanguageSettingsFragment"
        android:label="@string/languages_title"
        tools:layout="@layout/fragment_language_settings">
        <argument
            android:name="show_family_pairing"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_settings_to_subscription"
            app:destination="@id/subscriptionFragment" />
        <action
            android:id="@+id/action_settings_to_admin"
            app:destination="@id/adminFragment" />
    </fragment>

    <fragment
        android:id="@+id/subscriptionFragment"
        android:name="com.learnwords.app.ui.subscription.SubscriptionFragment"
        android:label="@string/subscription_title"
        tools:layout="@layout/fragment_subscription" />

    <fragment
        android:id="@+id/parentDashboardFragment"
        android:name="com.learnwords.app.ui.parent.ParentDashboardFragment"
        android:label="@string/parent_dashboard_title"
        tools:layout="@layout/fragment_parent_dashboard" />

    <fragment
        android:id="@+id/adminFragment"
        android:name="com.learnwords.app.ui.admin.AdminFragment"
        android:label="@string/admin_title"
        tools:layout="@layout/fragment_admin" />

</navigation>
